<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KingApp</string>
    <string name="action_settings">Settings</string>
    <string name="hidden_stuff">Hidden Stuff</string>
    <string name="check_in">Check in</string>
    <string name="title_section3">Section 3</string>
    <string name="user_info">About you</string>
    <string name="log_out">Log out</string>
    <string name="reload">Reload map</string>
    <string name="reload_info">Reload user info</string>
    <string name="info_progress_loading">Loading info</string>
    <string name="qr_button">Check in</string>
    <string name="locations_title">Your checked in locations</string>
    <string name="title_activity_check_in">Check In</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="check_in_title">Please choose a check in method</string>
    <string name="refresh">Refresh</string>
    <string name="check_in_progress">Checking in</string>
    <string name="title_activity_create_hidden_location">Submit a Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="hidden_progress_signing_in">Creating Location</string>
    <string name="prompt_h_name">Name</string>
    <string name="prompt_hint">Hint</string>
    <string name="action_create_location">Save</string>
    <string name="create_location">Create Hidden Location</string>
    <string name="prompt_points">Points</string>
    <string name="new_location_info">will be created with the following coordinates:
    </string>

</resources>