<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InfoFragment" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/info_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/info_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/info_progress_loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/info_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            style="@style/LoginFormContainer"
            android:layout_height="400dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/check_in_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/qr_button" />

            <TextView
                android:id="@+id/locations_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check_in_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:text="@string/locations_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/your_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/user_name"
                android:layout_alignBottom="@+id/user_name"
                android:layout_marginLeft="17dp"
                android:layout_toRightOf="@+id/user_name"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </RelativeLayout>
    </ScrollView>

</merge>